--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
+<header class="pokemon-header">
+  <div class="logo-container">
+    <img src="logo poke holo.png" alt="Pokémon Logo" class="pokemon-logo">
+  </div>
+  <h1>Cartes Pokémon Holographiques</h1>
+</header>
 
-
+<main>
   <app-pokemon-card-composant></app-pokemon-card-composant>
-
+</main>
